fix: make sorting icon by default visible

--- a/src/entities/users-list-table-with-pagination/ui/users-list-table/users-list-table.module.scss
+++ b/src/entities/users-list-table-with-pagination/ui/users-list-table/users-list-table.module.scss
@@ -1,3 +1,9 @@
+.bannedIconWithUserIdContainer {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
 .iconsContainer {
   display: flex;
   justify-content: space-evenly;
